Minor change to fix a glitch on mobile. I'm not sure what happened, but it doesn't seem to like when I specify the order with flex.

--- a/Gatsby/nickhtpappas.com/src/style/footer.css
+++ b/Gatsby/nickhtpappas.com/src/style/footer.css
@@ -127,20 +127,21 @@
 
 @media only screen and (max-width: 427px) {
   .footer {
-    flex-flow: column;
+    flex-flow: column-reverse;
   }
   .footer-links a {
     flex-basis: 0;
   }
   .footer-cell-one {
-    order: 2;
+    /* order: 2; */
   }
   .footer-cell-two {
-    order: 3;
+    /* order: 3; */
     display: flex;
     flex-flow: column;
     justify-content: center;
-    margin-top: 0.5rem;
+    margin: 2rem 0 3rem;
+    /* margin-top: 1.5rem; */
   }
   .copyright-cell {
     flex-grow: 1;
@@ -156,6 +157,6 @@
     margin: 0;
   }
   .footer-cell-three {
-    order: 1;
+    /* order: 1; */
   }
 }
